Fix font visibility issues with smaller screens

--- a/src/pages/AboutUs/OurTeam/Cell/Person/personcard.module.css
+++ b/src/pages/AboutUs/OurTeam/Cell/Person/personcard.module.css
@@ -11,7 +11,7 @@
   width: 100%;
   max-width: 700px;
   margin-top: 30px;
-  font-size: 3.25vw;
+  font-size: 4.5vw;
   font-weight: 700;
 }
 
@@ -19,7 +19,7 @@
   width: 100%;
   max-width: 700px;
   margin-top: 20px;
-  font-size: 2.75vw;
+  font-size: 4vw;
   font-weight: 400;
   color: #D9A129;
   ;
@@ -29,7 +29,7 @@
   width: 100%;
   max-width: 700px;
   margin-top: 10px;
-  font-size: 1.75vw;
+  font-size: 3vw;
   font-weight: 400;
   color: black;
 }
@@ -43,8 +43,13 @@
 }
 
 @media screen and (min-width: 800px) {
+  .personcard {
+    max-width: 1000px;
+  }
+
   .personposition {
-    font-size: 26px;
+    font-size: 28px;
+    max-width: 1000px;
   }
 
   .personname {
