--- a/src/pages/AboutUs/OurTeam/Cell/cellcard.module.css
+++ b/src/pages/AboutUs/OurTeam/Cell/cellcard.module.css
@@ -11,7 +11,7 @@
   width: 80%;
   max-width: 700px;
   font-family: 'Lora', serif;
-  font-size: 5vw;
+  font-size: 7vw;
   font-weight: 400;
 
   padding: 2px 0px;
@@ -45,6 +45,11 @@
 
 @media screen and (min-width: 800px) {
   .cellname {
-    font-size: 40px;
+    font-size: 5vh;
+    max-width: 1000px;
+  }
+
+  .cellimage {
+    max-width: 1000px;
   }
 }
